--- a/forge-1.10.2-12.18.3.2316-mdk/build.gradle
+++ b/forge-1.10.2-12.18.3.2316-mdk/build.gradle
@@ -11,11 +11,11 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the nessasary things for Forge to be setup.
 
 
-version = "1.0"
-group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+version = "1.10.2-1.0"
+group= "com.Flame.mhamod" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "MyHeroAcademiaMod"
 
-sourceCompatibility = JavaVersion.VERSION_1_8 targetCompatibility = JavaVersion.VERSION_1_8 // Need this here so eclipse task generates correctly.
+sourceCompatibility = targetCompatibility = "1.6" // Need this here so eclipse task generates correctly.
 compileJava {
     sourceCompatibility = targetCompatibility = "1.6"
 }
